syntax = "proto3";

package vehicle;

option go_package = "github.com/onlineTraveling/vehicle/pb";

service VehicleService{
    rpc CreateVehicle (CreateVehicleRequest) returns (CreateVehicleResponse);
}

message CreateVehicleRequest{
    string id = 1;
    string unicode = 2;
    int32 required_experts = 3;
    int32 speed = 4;
    int32 rent_price = 5;
    bool is_active = 6;
    string type = 7;
    Owner owner = 8;
}

message Owner {
    uint64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;  
}

message CreateVehicleResponse{
    string id = 1;
}